// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shape constructor heterogenous controls 1`] = `
ShapeDefinition {
  "config": {
    "type": {
      "num": CheckboxDefinition {
        "config": {},
        "version": 1,
      },
      "val": ColorDefinition {
        "config": {
          "defaultValue": "red",
        },
        "version": 1,
      },
    },
  },
}
`;

exports[`Shape gracefully handles missing/extra props copyData 1`] = `
{
  "color": {
    "alpha": 1,
    "swatchId": "[swatch-id]",
  },
  "link": undefined,
  "list": undefined,
  "text": "Hello world",
}
`;

exports[`Shape gracefully handles missing/extra props fromData 1`] = `
{
  "color": {
    "alpha": 1,
    "swatchId": "[swatch-id]",
  },
  "link": undefined,
  "list": undefined,
  "text": "Hello world",
}
`;

exports[`Shape gracefully handles missing/extra props getTranslatableData 1`] = `
{
  "color": null,
  "link": null,
  "list": null,
  "text": "Hello world",
}
`;

exports[`Shape gracefully handles missing/extra props mergeTranslatedData 1`] = `
{
  "color": {
    "alpha": 1,
    "swatchId": "[swatch-id]",
  },
  "link": undefined,
  "list": undefined,
  "text": "Hello world",
}
`;

exports[`Shape gracefully handles missing/extra props toData 1`] = `
{
  "color": {
    "@@makeswift/type": "color::v1",
    "alpha": 1,
    "swatchId": "[swatch-id]",
  },
  "link": {
    "payload": {
      "openInNewTab": false,
      "pageId": "[page-id]",
    },
    "type": "OPEN_PAGE",
  },
  "list": [
    {
      "id": "xxxxxxxx-xxxx-xxxx-xxxx-100000000000",
      "type": "makeswift::controls::number",
      "value": {
        "@@makeswift/type": "number::v1",
        "value": 17,
      },
    },
  ],
  "text": {
    "@@makeswift/type": "text-area::v1",
    "value": "Hello world",
  },
}
`;

exports[`Shape serialization serialize/deserialize composable shape of controls 1`] = `
{
  "config": {
    "type": {
      "shape": {
        "config": {
          "type": {
            "checkbox": {
              "config": {},
              "type": "makeswift::controls::checkbox",
              "version": 1,
            },
            "color": {
              "config": {
                "defaultValue": "red",
              },
              "type": "makeswift::controls::color",
              "version": 1,
            },
          },
        },
        "type": "makeswift::controls::shape",
      },
    },
  },
  "type": "makeswift::controls::shape",
}
`;

exports[`Shape serialization serialize/deserialize shape of controls 1`] = `
{
  "config": {
    "type": {
      "checkbox": {
        "config": {},
        "type": "makeswift::controls::checkbox",
        "version": 1,
      },
      "color": {
        "config": {
          "defaultValue": "red",
        },
        "type": "makeswift::controls::color",
        "version": 1,
      },
    },
  },
  "type": "makeswift::controls::shape",
}
`;
